wip(fix): back button on ios
Use breadcrumbs.

Refs: #407

--- a/web-application/client/components/generic/Page.css
+++ b/web-application/client/components/generic/Page.css
@@ -1,7 +1,7 @@
 .page {
     box-sizing: border-box;
     max-width: 100vw;
-    padding: 20px 0;
+    padding: 0;
     width: 100%;
 }
 
